Atualização do POrtal do secretário

--- a/src/login-secretario/assets/index.css
+++ b/src/login-secretario/assets/index.css
@@ -3,9 +3,9 @@
 :root {
     --header-height: 3rem;
     --nav-width: 250px;
-    --first-color: #4723D9;
-    --first-color-light: #AFA5D9;
-    --white-color: #F7F6FB;
+    --first-color: #003366;
+    --first-color-light: #afafe0;
+    --white-color: #FFFFFF;
 }
 
 
