--- a/src/login-secretario/assets/index.css
+++ b/src/login-secretario/assets/index.css
@@ -98,7 +98,11 @@ a {
     height: 100vh
 }
 
-
+.motivational-quote {
+    font-size: 1.5em; /* Aumenta o tamanho da frase */
+    font-family: 'Times New Roman', Times, serif; /* Muda a fonte */
+    font-weight: bold; /* Deixa a frase mais destacada */
+}
 
 
 @media screen and (min-width: 768px) {
