--- a/src/frontend/src/styles/index.css
+++ b/src/frontend/src/styles/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.body {
+  background-color: #f7f7f7;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar-brand {
+  font-weight: bold;
+  color: #007bff;
+}
+.hero-section {
+  background-color:  #003366;
+  color: white;
+  padding: 40px 0;
+  text-align: center;
+}
+.card-custom {
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  transition: transform 0.3s;
+}
+.card-custom:hover {
+  transform: translateY(-5px);
+}
+.login-btn {
+  margin-top: 20px;
+  background-color:  #003366;
+  color: white;
+  font-weight: bold;
+}
+.footer-social-icons {
+  list-style: none;
+  padding: 0;
+}
+.footer-social-icons li {
+  display: inline;
+  margin: 0 10px;
+}
+.footer-social-icons a {
+  color: #003366;
+  font-size: 24px;
+}
+.footer-logo {
+  max-width: 150px;
 }
