--- a/src/frontend/src/styles/App.css
+++ b/src/frontend/src/styles/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +18,37 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+.login-page {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #003366; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* login */
+.login-page .App-header {
+  background-color: transparent;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: rgb(255, 255, 255);
 }
+.login-page .btn-custom-w-100-mb-1 {
+  background-color: #416bf5; 
+  color: rgb(255, 255, 255); 
+  border: 1px solid #ccc;
+  width: 100%; 
+  margin-bottom: 1rem;
+}
+.login-page .btn-custom-w-100-mb-1:hover {
+  background-color: #170ffe ;
+  color: aliceblue;
+} 
